<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.williambrown.homework01.MainActivity">

    <TextView
        android:id="@+id/utc_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="17dp"
        android:layout_marginRight="17dp"
        android:layout_marginTop="13dp"
        android:layout_toLeftOf="@+id/input_hours"
        android:layout_toStartOf="@+id/input_hours"
        android:text="@string/utc_text"
        android:textColor="@android:color/black"
        android:textSize="@dimen/text_size"
        tools:ignore="RelativeOverlap" />

    <EditText
        android:id="@+id/input_hours"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/utc_text"
        android:layout_alignBottom="@+id/utc_text"
        android:layout_toLeftOf="@+id/text_seperation"
        android:layout_toStartOf="@+id/text_seperation"
        android:ems="10"
        android:hint="@string/hours_hint"
        android:inputType="number"
        android:textAlignment="center"
        android:maxLength="2" />

    <TextView
        android:id="@+id/text_seperation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/input_hours"
        android:layout_alignBottom="@+id/input_hours"
        android:layout_centerHorizontal="true"
        android:text="@string/colon"
        android:textColor="@android:color/black"
        android:textSize="@dimen/text_size" />

    <EditText
        android:id="@+id/input_minutes"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/text_seperation"
        android:layout_alignBottom="@+id/text_seperation"
        android:layout_toEndOf="@+id/text_seperation"
        android:layout_toRightOf="@+id/text_seperation"
        android:ems="10"
        android:hint="@string/minute_hint"
        android:inputType="number"
        android:textAlignment="center"
        android:maxLength="2" />

    <Switch
        android:id="@+id/button_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:checked="true"
        android:text="@string/button_radio"
        android:textSize="@dimen/text_size"
        tools:checked="true"
        android:layout_below="@+id/input_hours"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/view_results"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/button_switch"
        android:layout_marginTop="29dp"
        android:text="@string/results"
        android:textColor="@android:color/black"
        android:textSize="20sp" />

    <Button
        android:id="@+id/button_est"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/view_results"
        android:layout_marginTop="40dp"
        android:text="@string/est_text"
        android:visibility="visible" />

    <Button
        android:id="@+id/button_mst"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_cst"
        android:layout_centerHorizontal="true"
        android:text="@string/mst_text"
        android:visibility="visible" />

    <Button
        android:id="@+id/button_pst"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/button_mst"
        android:text="@string/pst_text"
        android:visibility="visible" />

    <Button
        android:id="@+id/button_clear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/button_pst"
        android:text="@string/clear_text"
        android:visibility="visible" />

    <Button
        android:id="@+id/button_cst"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/button_est"
        android:text="@string/cst_text"
        android:visibility="visible" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:layout_above="@+id/button_clear"
        android:layout_centerHorizontal="true"
        android:visibility="invisible">

        <RadioButton
            android:id="@+id/radio_est"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/est_text"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/radio_cst"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cst_text"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/radio_mst"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mst_text"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/radio_pst"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pst_text"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/radio_clear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/clear_text"
            android:textSize="18sp" />

    </RadioGroup>

    <Button
        android:id="@+id/button_convert"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/radioGroup"
        android:layout_marginTop="7dp"
        android:text="@string/convert_text"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/previous_day"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/view_results"
        android:layout_marginEnd="13dp"
        android:layout_marginRight="13dp"
        android:text="               "
        android:textColor="@color/colorAccent"
        android:textSize="20sp" />

</RelativeLayout>
